--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -80,7 +80,7 @@ complete <- read_csv(here("do_not_push","tpw_archive.csv"))
 
 # import survey data header for parsing question text
 # Maria to update filename
-qualtrics <- read_csv(here("do_not_push", "tpw_raw_qualtrics_5-30-23.csv"))
+qualtrics <- read_csv(here("do_not_push", "tpw_telephone_metadata_codebook"))
 
 source(here("functions", "codebook_fun.R"))
 ```
@@ -372,7 +372,7 @@ Note that we have made every effort to archive individual-level items so that us
 
 ### Data Use Notes and Disclaimers
 
-Because the use of and development of measures is ever evolving and there exist many ways to analyze data, we have made every effort to archive individual-level items so that users of the data can compute summary scores according to preferred methods, latest empirical findings, and recommended best practices, including the handling of missing data. Users are also encouraged to thoroughly read the data documentation and perform data checks for outliers, out-of-range values, and to determine if any cases should be excluded from analyses based on checks with relevant criteria for research questions or analyses of interest. Users are encouraged to query the study author if questions arise.
+Because the use of and development of measures is ever evolving and there exist many ways to analyze data, we have made every effort to archive individual-level items so that users of the data can compute summary scores according to preferred methods, latest empirical findings, and recommended best practices, including best practices for handling missing data. Users are also encouraged to thoroughly read the data documentation and perform data checks for outliers, out-of-range values, and to determine if any cases should be excluded from analyses based on checks with relevant criteria for research questions or analyses of interest. Users are encouraged to query the study author if questions arise.
 
 ### Study Acronymns
 
@@ -413,7 +413,7 @@ print(abbrev_table)
 
 At every wave of this longitudinal study, we asked participants about each place they had lived, even if for only one night. We asked them the date they entered and left each location, and we coded the type of location(s). In this assessment, we started with their last known location and the date we had last interviewed each participant.
 
-- Below we provide the variables computed for those data, including the total number of transitions from one location to the next each participant had reported, since the last assessment wave (approximately 2015), and the number of times each participant reported being incarcerated in a jail or prison, or being unhoused. 
+- Below we provide the variables computed for those data, including the total number of living situation transitions each participant had reported since the last assessment wave (approximately 2015), and the number of times each participant reported being incarcerated or being unhoused. 
 
 Reference: Characteristics of Living Situations [CLS] (OSLC Unpublished Measure)
 
@@ -1234,7 +1234,7 @@ cint_sub_tbl_binary
 
 ```
 For continuous items:
-# Maria double check range once Kaylee queries data
+
 
 ```{r cintsub-cont-desc}
 
@@ -1981,7 +1981,38 @@ eds_tbl
 
 Information on arrests, charges, dispositions, and incarceration were sought from the adult criminal legal system in each state/county where the participant had self-reported residing since the last assessment wave. For each participant, all identified offenses (charges) were collated, the offense date, arrest/referral status for each offense, disposition(s), when available were coded. When fines,  jail, prison, or probation were sentenced and the information was provided, the amount/ length of the sentence was recorded. 
 
--   Offenses were coded according to the severity of the offense (e.g., 1-status offenses, 2 - law violations/U misdemeanors; 3-5 misdemeanor offenses, 6-9 felony offenses) 
+-   Offenses were coded according to the severity of the offense according to the scheme presented in the table below. These ratings were used to compute the aggregate severity variables.
+
+```{r code_table, results = 'asis'}
+
+code_table_df <- data.frame(
+  abbrev = c("0.00", "1.00", "2.00", "3.00", "4.00", "5.00", "6.00", "7.00", "8.00", "9.00"),
+  descrip = c("Court Proceeding", "Status Offense",
+    "Law Violations/Class U Misdemeanor",
+    "Class C Misdemeanor", "Class B Misdemeanor", "Class A Misdemeanor", "Class U Felony",
+    "Class C Felony", "Class B Felony", "Class A Felony"
+  ),
+  stringsAsFactors = FALSE
+)
+
+#create table
+code_table <- code_table_df %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(abbrev ~ px(100),
+             descrip ~ px(600)) %>%
+  tab_style(style = cell_text(align = "left"),locations = cells_body(columns = vars("descrip"))) %>%
+  # cols_align(align = "left") %>%
+  cols_label(abbrev = "Severity Code",
+             descrip = "Offense") %>%
+  apply_labtab_theme()
+
+
+# Print the table
+print(code_table)
+
+```
 
 -   Offenses were also coded according to the type of offense using methods that have been used in the history of this longitudinal study (see reference below) 
 
@@ -2031,8 +2062,8 @@ arrest_data_df <- data.frame(
             "Total number of new offenses wave 14",
             "Total number of new offenses wave 14 including status offenses ",
             "Total number of new felony offenses wave 14",
-            "Serverity of offenses in wave 14", 
-            "Serverity of offenses in wave 14 including status offenses",
+            "Severity of offenses in wave 14", 
+            "Severity of offenses in wave 14 including status offenses",
             "Total number of times incarcerated wave 14", 
             "Wave 14 new desistance (yes)")) 
 
@@ -2052,7 +2083,7 @@ print(arrest_data_df_table)
 
 At every wave of this young adult and adult assessments in this study, we asked participants if they had been arrested since the last assessment, how many times they had been arrested, and the date, location, and nature of those arrests. 
 
-- Below we provide the variables in the data related to self-reported arrests. Please note that sometimes participants consider 'arrests' to be 'offenses,' which may or may not result in arrest. Other times, participants consider 'arrests' that do not ultimately result in charges of official offenses. 
+- Below we provide the variables in the data related to self-reported arrests. 
 
 Reference: Self-Reported Arrests [ARRIL] (OSLC Unpublished Measure)
 ```{r arril-data-table, results = 'asis'}
@@ -3184,10 +3215,10 @@ ggarrange(p_lec_total_witness, p_lec_total_happen + rremove("ylab")
 
 ### ITQ Description
 
-The ITQ is a 9-item brief questionnaire designed to measure the core features of Posttraumatic Stress Disorder.
+The ITQ is an 18-item self-report brief questionnaire designed to measure the core features of Posttraumatic Stress Disorder.
 
--   For the present study, 9 items from the ITQ were collected. The datafile contains
-a total 15 variables related to the ITQ.
+-   For the present study, the first 9 items from the ITQ were collected. The datafile contains
+a total 15 variables related to the ITQ, including the computed variables.
 
 -   The language below was used to introduce the ITQ.
 
@@ -3197,14 +3228,13 @@ a total 15 variables related to the ITQ.
 
 -   No items need to be reverse scored. 
 
--   The missing data rule was applied. Calculations were completed for
-participants with 33% or less missing data (this includes -77 responses).
+-   The missing data rule was applied. Calculations were completed for participants with 33% or less missing data (this includes -77 responses).
 
--   **Higher** scores reflect **greater** ptsd symptoms.
+-   **Higher** scores reflect **greater** PTSD symptoms.
 
 -   There are several ways to score the ITQ and methods are available in the citation provided below. 
 
--   One limitation of this measures in the current study is the answer scale shown to participant in this study (see value labels below). We computed criteria for PTSD based on participant endorsement of one symptom within each cluster based on a value of `A little bit 1-2 times per week`. The ITQ criteria differs across empirical studies and users may consider alternate scoring for PTSD diagnostic criteria, but should keep in mind the scale used in the current study. 
+-   One limitation of this measures in the current study is the answer scale that was shown to participants (see value labels below). We computed criteria for PTSD based on participant endorsement of one symptom within each cluster based on a value of `A little bit (1-2 times per week)`. The ITQ criteria for PTSD differs across empirical studies based on the answer scale used and users may consider alternate scoring for PTSD diagnostic criteria in this sample, but should keep in mind the scale used in the current study. 
 
 
 Reference:
@@ -3329,7 +3359,7 @@ itq_total_alpha <- itq_complete %>%
 
 itq_scale_df <- data.frame(
   var_name = c("Re-experiencing Subscale (2)", " Avoidance Subscale (2)", 
-               "Threat Subscale (2)", "Functional Impairment Subscale (3)", "Total Score not including functional impairmment (6)", "PTSD Diagnosis"),
+               "Sense of Threat Subscale (2)", "Functional Impairment Subscale (3)", "Total Score not including functional impairmment (6)", "PTSD Diagnosis"),
   scale = c("itq_re_total", "itq_av_total", "itq_th_total", "itq_fi_total", "itq_ptsd_total", "itq_ptsd_dx"),
   scale_construction = c("`itq1`, `itq2`", "`itq3`, `itq4`", "`itq5`,`itq6`",
                          "`itq7`, `itq8`, `itq9`",
@@ -3370,8 +3400,7 @@ print(itq_scale_df)
 
 #### Descriptive Statistics
 
-Descriptive statistics are presented below for each item, total, and
-subscale score:
+Descriptive statistics are presented below for each item, total, and subscale score:
 
 ```{r itq-mean-items}
 # Calculate the summary statistics for each variable
@@ -3417,33 +3446,53 @@ itq_tbl
 Distributions are presented below for the total score and each subscale:
 
 ```{r itq-distributions, class.source='fold', echo = FALSE}
-# Maria, I'm comment out this section, so I can render, after we have the computation figured out we can work on this section
+
 p_itq_re_total <- itq_complete %>%
+  filter(itq_re_total >= 0) %>%
   composite_hist(
     x = itq_re_total,
     bins = 8
   ) +
-  labs(title = "Re-experiencing Subscale Subscale")
+  labs(title = "Re-experiencing")
 
 p_itq_av_total <- itq_complete %>%
+  filter(itq_av_total >= 0) %>%
   composite_hist(
     x = itq_av_total,
     bins = 8
   ) +
-  labs(title = "Avoidance Subscale Subscale")
+  labs(title = "Avoidance")
 
 p_itq_th_total <- itq_complete %>%
+  filter(itq_th_total >= 0) %>%
   composite_hist(
     x = itq_th_total,
     bins = 8
   ) +
-  labs(title = "Thread Subscale Subscale")
+  labs(title = "Sense of Threat")
+
+p_itq_fi_total <- itq_complete %>%
+  filter(itq_fi_total >= 0) %>%
+  composite_hist(
+    x = itq_fi_total,
+    bins = 8
+  ) +
+  labs(title = "Functional Impairment")
+
+p_itq_ptsd_total <- itq_complete %>%
+   filter(itq_ptsd_total >= 0) %>%
+  composite_hist(
+    x = itq_ptsd_total,
+    bins = 8
+  ) +
+  labs(title = "PTSD Total (without functional impairment)")
 
 
 ggarrange(p_itq_re_total, p_itq_av_total + rremove("ylab"),
-          p_itq_th_total
+          p_itq_th_total, p_itq_fi_total,
+          p_itq_ptsd_total
           ) %>%
-  annotate_figure(top = text_grob( "Distribution for ITQ Subscale \n(x-axis and y-axis are in different scales)"))
+  annotate_figure(top = text_grob( "Distribution for ITQ Subscales and Total Score \n(x-axis and y-axis are in different scales)"))
 
 ```
 
@@ -4618,7 +4667,7 @@ sex_word_long <- sex_word %>%
                                                            \n 2 = gay or lesbian (attracted to the same sex)
                                                            \n 3 = bi-sexual (attracted to both males and females)
                                                            \n 4 = Pansexual (recoded from originally selected other)
-                                                           \n -77  = Decline to Answer", `Value`)) %>%  # Maria: We might want to remove the number before variable lable
+                                                           \n -77  = Decline to Answer", `Value`)) %>%  
   mutate(`Value` = if_else(var_name %in% c( "s11", "s16"), " 0 = Never
                                                            \n 1 = Rarely
                                                            \n 2 = Sometimes
@@ -6409,7 +6458,7 @@ arq_subscale <- complete %>%
 
 ```{r ARQ-scale-table, results = 'asis'}
 # Create the table as a data frame
-# Maria to update these names
+
 arq_scale_df <- data.frame(
   var_name = c("arq_group", "arq_model_self_attach_anxiety", "arq_model_other_attach_avoid"),
   scale = c("Attachment Group", "Model of Self - Attachment Anxiety", "Model of Other - Avoidant Attachment"),
@@ -7276,7 +7325,7 @@ socinf_sub_word_long <- socinf_sub_word %>%
         \n3 = Often
       \n-55 = N/A
       \n-77 = Decline to Answer", `Value`)) %>%
-  # TODO: Maria, socb4c, socc4c, socd4c doesn't have NA option
+
     mutate(Value = if_else(grepl("4c$", var_name), "0 = Never
        \n1 = Hardly ever
        \n2 = Sometimes
